Edited FrenchPlate2 to make it smaller and to cut out the blurry parts. Actually went back to one stylesheet. Fixed the background so it would look the same for all pages.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 html {
 	background: url(FrenchPlate2.jpg) center;
 	background-repeat: no-repeat;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 	background-attachment: fixed;
 }
 
@@ -8,8 +12,6 @@ html {
 <!--This creates the matte-->
 header, body, div, nav, footer {
 	background-color: #FAEBD7;
-	padding-top: 0px;
-	padding-bottom: 0px;
 	padding-left: 10px;
 	padding-right: 10px;
 }
